operator/pkg/gateway-api/testdata/gateway/hostNetwork-enabled-nodelabel/input/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: hostnetwork-enabled-nodeselector
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: cilium
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-gateway-hostnetwork-enabled-nodeselector
  namespace: gateway-conformance-infra
  labels:
    gateway.networking.k8s.io/gateway-name: hostnetwork-enabled-nodeselector
    io.cilium.gateway/owning-gateway: hostnetwork-enabled-nodeselector
spec:
  ports:
    - port: 3000
      targetPort: 80
      nodePort: 30020
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.3
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker2
  labels:
    role: gateway
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.4
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
---
apiVersion: v1
kind: Node
metadata:
  name: kind-worker3
spec:
  podCIDR: 10.244.1.0/24
  podCIDRs:
  - 10.244.1.0/24
  - fd00:10:244:1::/64
status:
  addresses:
  - address: 172.18.0.5
    type: InternalIP
  - address: fc00:f853:ccd:e793::3
    type: InternalIP
  - address: kind-worker
    type: Hostname
